--- a/ansible/play-updateOS.yml
+++ b/ansible/play-updateOS.yml
@@ -7,13 +7,15 @@
   tasks:
           
    - name: Atualização de repo debian
-     apt: update_cache=yes
-     force_apt_get: yes
+     apt: 
+       - update_cache=yes
+       - force_apt_get=yes
      when: ansible_os_family == "Debian"
 
    - name: Atualização debian
-     apt: upgrade=dist
-     force_apt_get: yes
+     apt: 
+       - upgrade=dist
+       - force_apt_get=yes
      when: ansible_os_family == "Debian"
    
    - name: Atualização de repo redhat
