--- a/ansible/play-updateOS.yml
+++ b/ansible/play-updateOS.yml
@@ -1,25 +1,22 @@
----
-- hosts: all
-  
-  vars:
-         ansible_python_interpreter: "/usr/bin/python3"
-  
-  tasks:
-          
-   - name: Atualização de repo debian
-     apt: 
-       - update_cache=yes
-       - force_apt_get=yes
-     when: ansible_os_family == "Debian"
-
-   - name: Atualização debian
-     apt: 
-       - upgrade=dist
-       - force_apt_get=yes
-     when: ansible_os_family == "Debian"
-   
-   - name: Atualização de repo redhat
-     yum: name=* state=latest
-     when: ansible_os_family == "RedHat"
- 
-
+--- 
+- 
+  hosts: all
+  tasks: 
+    - 
+      apt: 
+        - update_cache=yes
+        - force_apt_get=yes
+      name: "Atualização de repo debian"
+      when: "ansible_os_family == \"Debian\""
+    - 
+      apt: 
+        - upgrade=dist
+        - force_apt_get=yes
+      name: "Atualização debian"
+      when: "ansible_os_family == \"Debian\""
+    - 
+      name: "Atualização de repo redhat"
+      when: "ansible_os_family == \"RedHat\""
+      yum: "name=* state=latest"
+  vars: 
+    ansible_python_interpreter: /usr/bin/python3
