--- a/ansible/play-updateOS.yml
+++ b/ansible/play-updateOS.yml
@@ -2,17 +2,15 @@
 - 
   hosts: all
   tasks: 
-    - 
+    - name: "Atualização de repo debian"
       apt: 
         update_cache=yes
         force_apt_get=yes
-      name: "Atualização de repo debian"
       when: "ansible_os_family == \"Debian\""
-    - 
+    - name: "Atualização debian"
       apt: 
         upgrade=dist
         force_apt_get=yes
-      name: "Atualização debian"
       when: "ansible_os_family == \"Debian\""
     - 
       name: "Atualização de repo redhat"
