--- a/ansible/play-updateOS.yml
+++ b/ansible/play-updateOS.yml
@@ -4,13 +4,15 @@
   tasks: 
     - name: "Atualização de repo debian"
       apt: 
-        update_cache=yes
-        force_apt_get=yes
+        update_cache: yes
+        force_apt_get: yes
+        become: yes
       when: "ansible_os_family == \"Debian\""
     - name: "Atualização debian"
       apt: 
         upgrade=dist
-        force_apt_get=yes
+        force_apt_get: yes
+        become: yes
       when: "ansible_os_family == \"Debian\""
     - 
       name: "Atualização de repo redhat"
