--- a/ansible/play-installDocker.yml
+++ b/ansible/play-installDocker.yml
@@ -8,12 +8,16 @@
   
       - name: Install docker
         shell: curl -fsSL https://get.docker.com | sh
+        become: yes
 
       - name: Install docker-compose
         shell: curl -L https://github.com/docker/compose/releases/download/1.22.0/docker-compose-$(uname -s)-$(uname -m) -o /usr/local/bin/docker-compose
+        become: yes
 
       - name: Config docker-compose
-        shell: sudo chmod +x /usr/local/bin/docker-compose
+        shell: chmod +x /usr/local/bin/docker-compose
+        become: yes
         
       - name: Start service docker
-        shell: sudo service docker start
+        shell: service docker start
+        become: yes
